--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -8,8 +8,63 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    font-family: 'Crayons';
+    color: rgba(189, 189, 189, 0.959);
     }
+@font-face {
+    font-family: 'Crayons';
+    src: url(/assets/font/Colored\ Crayons.ttf);
+}
 .container{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    height: 80vh;
+    font-size: 20px;
+}
+
+#hangman__img{
+    width: 48%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+#img{
+    width: 70%;
+    height: 70%;
+    border-radius: 50%;
+    border: 2px solid black;
+}
+#input__zone{
+    width: 48%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+#input {
+    width: 50px;
+    text-align: center;
+}
+
+#word {
+    letter-spacing: 25px;
+    height: 30%;
+}
+
+.word__character {
+    width: 5px;
+    border-bottom: 1px solid;
+    margin-right: 12px;
+   padding-left: 1px;
+}
+
+.you__lost {
+    font-size: 44px;
+    width: fit-content;
 }
